fix apostrophe and rename my2050Kenya on card

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="2050, calculator, kenya, My 2050 Calculator">
     <meta name="description"
@@ -2169,7 +2170,7 @@
             </div> -->
 
             <p style="text-align: center; margin-top: 3.75vw; font-family: Helvetica; font-weight: bold; font-size: 0.9vw; color: #054170;">
-                Per Year
+                Percentage %
             </p>
         </div>
     </div>
@@ -2808,7 +2809,7 @@
                 </p>
 
                 <p style="text-align: center; margin-top: 1.4vw; font-family: Helvetica; font-size: 0.9vw; font-style: bold;">
-                    <br>My 2050  Carbon Emissions Calculator is an online tool that allows users to create instances <br> that can be used to predict Kenya&apos;s CO<sub>2</sub> greenhouse gas emissions to inform the necessary <br> decisions that will help realise Kenya’s journey to net zero emission targets by 2050.
+                    <br>My2050 Kenya is an online tool that allows users to create instances <br> that can be used to predict Kenya&apos;s CO<sub>2</sub> greenhouse gas emissions to inform the necessary <br> decisions that will help realise Kenya’s journey to net zero emission targets by 2050.
                 </p>
 
 
