pages links updated

--- a/light-vehicles-info-page.html
+++ b/light-vehicles-info-page.html
@@ -23,7 +23,7 @@
     <body>
         <nav style="position: fixed; width: 100vw; height: 5vw; left: 0vw; top: 0vw; background-color: #054170; z-index: 100;">
             <div id="travel-demand-nav-link">
-                <a href="travel-demand-info-page.html">
+                <a href="javascript:travelDemandPage()">
                     <img src="Assets/transport-demand.svg" style="position: absolute; width: 3.5vw; top: 1.5vw; left: 3.7vw; z-index: 10;">
                 </a>
 
@@ -44,9 +44,11 @@
             </div>
 
             <div id="heavy-vehicles-nav-link">
-                <a href="heavy-vehicles-info-page.html">
+                <!-- <a href="heavy-vehicles-info-page.html">
                     <img src="Assets/heavy-vehicles.svg" style="position: absolute; width: 2.4vw; top: 1.5vw; left: 13.95vw; z-index: 10;">
-                </a>
+                </a> -->
+
+                <img src="Assets/heavy-vehicles.svg" style="position: absolute; width: 2.4vw; top: 1.5vw; left: 13.95vw; z-index: 10;">
 
                 <!-- <img src="Assets/heavy-vehicles.svg" style="position: absolute; width: 2.4vw; top: 1.5vw; left: 13.95vw; z-index: 10;"> -->
 
@@ -55,7 +57,7 @@
             </div>
 
             <div id="behaviour-nav-link">
-                <a href="behaviour-info-page.html">
+                <a href="javascript:housingAppliancesPage()">
                     <img src="Assets/house-temp-icon.svg" style="position: absolute; width: 2vw; top: 1.5vw; left: 19.1vw;">
                 </a>
 
@@ -66,7 +68,7 @@
             </div>
 
             <div id="efficiency-nav-link">
-                <a href="efficiency-info-page.html">
+                <a href="javascript:lightingAppliancesPage()">
                     <img src="Assets/efficiency.svg" style="position: absolute; width: 2vw; top: 1.5vw; left: 24.05vw;">
                 </a>
 
@@ -77,7 +79,7 @@
             </div>
 
             <div id="heating-system-nav-link">
-                <a href="heating-systems-info-page (copy).html">
+                <a href="javascript:hotWaterPage()">
                     <img src="Assets/heating.svg" style="position: absolute; width: 2.7vw; top: 1.5vw; left: 28.65vw;">
                 </a>
 
@@ -88,7 +90,7 @@
             </div>
 
             <div id="carbon-instesity-nav-link">
-                <a href="carbon-intensity-systems-info-page.html">
+                <a href="javascript:carbonIntensityPage()">
                     <img src="Assets/carbon-intensity.svg" style="position: absolute; width: 2vw; top: 1.5vw; left: 33.9vw;">
                 </a>
 
@@ -99,7 +101,7 @@
             </div>
 
             <div id="carbon-capture-nav-link">
-                <a href="carbon-capture-systems-info-page.html">
+                <a href="javascript:carbonCapturePage()">
                     <img src="Assets/carbon-capture.svg" style="position: absolute; width: 2.2vw; top: 1.5vw; left: 38.8vw;">
                 </a>
 
@@ -110,7 +112,7 @@
             </div>
 
             <div id="hydrogen-nav-link">
-                <a href="hep-page.html">
+                <a href="javascript:hepPage()">
                     <img src="Assets/hydro-power-icon.png" style="position: absolute; width: 2.2vw; top: 1.5vw; left: 43.77vw;">
                 </a>
 
@@ -121,7 +123,7 @@
             </div>
 
             <div id="nuclear-nav-link">
-                <a href="nuclear-info-page.html">
+                <a href="javascript:nuclearPage()">
                     <img src="Assets/nuclear-icon.svg" style="position: absolute; width: 2vw; top: 1.5vw; left: 48.69vw;">
                 </a>
 
@@ -132,7 +134,7 @@
             </div>
 
             <div id="wind-nav-link">
-                <a href="wind-info-page.html">
+                <a href="javascript:windPage()">
                     <img src="Assets/windmill-icon.svg" style="position: absolute; width: 2.2vw; top: 1.55vw; left: 53.7vw;">
                 </a>
 
@@ -143,7 +145,7 @@
             </div>
 
             <div id="solar-nav-link">
-                <a href="solar-info-page.html">
+                <a href="javascript:solarPage()">
                     <img src="Assets/solar-icon.svg" style="position: absolute; width: 2.2vw; top: 1.5vw; left: 58.4vw;">
                 </a>
 
@@ -154,7 +156,7 @@
             </div>
 
             <div id="wave-tidal-nav-link">
-                <a href="geothermal-page.html">
+                <a href="javascript:geoPage()">
                     <img src="Assets/geothermal-icon.png" style="position: absolute; width: 2.1vw; top: 1.5vw; left: 63.3vw;">
                 </a>
 
@@ -165,7 +167,7 @@
             </div>
 
             <div id="forestry-nav-link">
-                <a href="forestry-info-page.html">
+                <a href="javascript:forestryPage()">
                     <img src="Assets/forestr-icon.svg" style="position: absolute; width: 2.4vw; top: 1.5vw; left: 68.18vw;">
                 </a>
 
@@ -176,7 +178,7 @@
             </div>
 
             <div id="bio-eneergy-nav-link">
-                <a href="bioenergy-info-page.html">
+                <a href="javascript:bioPage()">
                     <img src="Assets/bio-energy-icon.svg" style="position: absolute; width: 1.8vw; top: 1.5vw; left: 73.35vw;">
                 </a>
 
@@ -309,6 +311,63 @@
             const searchParams = new URLSearchParams(window.location.search);
 
             var techAmbitionLeverNumber = searchParams.get('techAmbitionLeverNumber');
+
+            //Will Update the URL parameters of the pages according to the variables they are added to
+            function travelDemandPage() {
+                window.location.href = "travel-demand-info-page.html?" +window.location.search
+            }
+
+            function technologyPage() {
+                window.location.href = "light-vehicles-info-page.html?" +window.location.search
+            }
+
+            function housingAppliancesPage() {
+                window.location.href = "behaviour-info-page.html?" +window.location.search
+            }
+
+            function lightingAppliancesPage() {
+                window.location.href = "efficiency-info-page.html?" +window.location.search
+            }
+
+            function hotWaterPage() {
+                window.location.href = "heating-systems-info-page (copy).html?" +window.location.search
+            }
+
+            function carbonIntensityPage() {
+                window.location.href = "carbon-intensity-systems-info-page.html?" +window.location.search
+            }
+
+            function carbonCapturePage() {
+                window.location.href = "carbon-capture-systems-info-page.html?" +window.location.search
+            }
+
+            function hepPage() {
+                window.location.href = "hep-page.html?" +window.location.search
+            }
+
+            function nuclearPage() {
+                window.location.href = "nuclear-info-page.html?" +window.location.search
+            }
+
+            function windPage() {
+                window.location.href = "wind-info-page.html?" +window.location.search
+            }
+
+            function solarPage() {
+                window.location.href = "solar-info-page.html?" +window.location.search
+            }
+
+            function geoPage() {
+                window.location.href = "geothermal-page.html?" +window.location.search
+            }
+
+            function forestryPage() {
+                window.location.href = "forestry-info-page.html?" +window.location.search
+            }
+
+            function bioPage() {
+                window.location.href = "bioenergy-info-page.html?" +window.location.search
+            }
 
             document.getElementById("ambitionlevelinfo").innerText = techAmbitionLeverNumber;
         </script>
