compressed images added

--- a/carbon-capture-systems-info-page.html
+++ b/carbon-capture-systems-info-page.html
@@ -290,7 +290,7 @@
         </nav>
 
         <div id="section-1">
-            <img src="images/Bus1.png" style="position: absolute; width: 100vw; top: 5vw; left: -0.1vw;">
+            <img src="images/carbon-capture-image.jpg" style="position: absolute; width: 100vw; top: 5vw; left: -0.1vw;">
 
             <p style="position: absolute; left: 2.8vw; top: 11vw; font-family: 'Roboto', sans-serif; font-size: 2.5vw; font-weight: 595; text-align: center; color: #F0A828; z-index: 10;">
                 Carbon Capture (CCS)
