--- a/light-vehicles-info-page.html
+++ b/light-vehicles-info-page.html
@@ -213,10 +213,10 @@
         </nav>
 
         <div id="section-1">
-            <img src="images/Bus1.png" style="position: absolute; width: 100vw; top: 5vw; left: -0.1vw;">
+            <img src="images/light-vehicles-image.jpg" style="position: absolute; width: 100vw; top: 5vw; left: -0.1vw;">
 
             <p style="position: absolute; left: 2.8vw; top: 11vw; font-family: 'Roboto', sans-serif; font-size: 2.5vw; font-weight: 595; text-align: center; color: #F0A828; z-index: 10;">
-                Light Vehicles (Transport)
+                Technolgy
             </p>
 
             <p style="position: absolute; left: 3.5vw; top: 16.1vw; width: 34vw; font-family: 'Roboto', sans-serif; font-size: 1.2vw; font-weight: 550; color: white; z-index: 10; line-height: 1.5vw;">
