get results pages are now dynamic

--- a/index.html
+++ b/index.html
@@ -5826,7 +5826,7 @@
           "&transport_international_val=" +
           transport_international_val +
           "&total_emmissions_val=" +
-          total_emmissions_val;
+          total_emmissions_val + "&ambitionLeverNumber=" + ambitionLeverNumber + "&techAmbitionLeverNumber=" + techAmbitionLeverNumber + "&houseAmbitionLeverNumber=" + houseAmbitionLeverNumber + "&lightingAmbitionLeverNumber=" + lightingAmbitionLeverNumber + "&hotWaterAmbitionLeverNumber=" + hotWaterAmbitionLeverNumber + "&carbonIntensityAmbitionLeverNumber=" + carbonIntensityAmbitionLeverNumber + "&carbonCaptureAmbitionLeverNumber=" + carbonCaptureAmbitionLeverNumber + "&hepAmbitionLeverNumber=" + hepAmbitionLeverNumber + "&nuclearAmbitionLeverNumber=" + nuclearAmbitionLeverNumber + "&windAmbitionLeverNumber=" + windAmbitionLeverNumber + "&solarAmbitionLeverNumber=" + solarAmbitionLeverNumber + "&geoAmbitionLeverNumber=" + geoAmbitionLeverNumber + "&forestryAmbitionLeverNumber=" + forestryAmbitionLeverNumber + "&bioAmbitionLeverNumber=" + bioAmbitionLeverNumber;
       }
 
 
